--- a/weather-api/weather-api.html
+++ b/weather-api/weather-api.html
@@ -7,12 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-
     
-    <p id="demo">translate</p>
+    <p id="demo">Weather</p>
 
-
-    <script src="translate.js"></script>
-
+    <script src="weather-api.js"></script>
 </body>
 </html>
